--- a/Hands.Of.Jarvis/Hands.Of.Jarvis.csproj
+++ b/Hands.Of.Jarvis/Hands.Of.Jarvis.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DAO\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.3" />
+  </ItemGroup>
 </Project>
