--- a/Hands.Of.Jarvis.Tests/Hands.Of.Jarvis.Tests.csproj
+++ b/Hands.Of.Jarvis.Tests/Hands.Of.Jarvis.Tests.csproj
@@ -10,6 +10,10 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TestDb\" />
+  </ItemGroup>
 </Project>
