--- a/Hands.Of.Jarvis.Tests/Hands.Of.Jarvis.Tests.csproj
+++ b/Hands.Of.Jarvis.Tests/Hands.Of.Jarvis.Tests.csproj
@@ -10,9 +10,13 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="TestDb\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Hands.Of.Jarvis\Hands.Of.Jarvis.csproj" />
   </ItemGroup>
 </Project>
