--- a/Hands.Of.Jarvis/Hands.Of.Jarvis.csproj
+++ b/Hands.Of.Jarvis/Hands.Of.Jarvis.csproj
@@ -8,6 +8,6 @@
     <Folder Include="DAO\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.3" />
   </ItemGroup>
 </Project>
