Added simple read tests, ensured that single and mult-select works

--- a/Hands.Of.Jarvis.Tests/Hands.Of.Jarvis.Tests.csproj
+++ b/Hands.Of.Jarvis.Tests/Hands.Of.Jarvis.Tests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Folder Include="TestDb\" />
+    <Folder Include="TestModels\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hands.Of.Jarvis\Hands.Of.Jarvis.csproj" />
