--- a/Hands.Of.Jarvis.Tests/Hands.Of.Jarvis.Tests.csproj
+++ b/Hands.Of.Jarvis.Tests/Hands.Of.Jarvis.Tests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.3" />
+    <PackageReference Include="LiquidTestReports.Markdown" Version="1.0.9" />
   </ItemGroup>
 
   <ItemGroup>
