--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore --configuration Release
             # set pr number, if it's a pr build
     - name: set pr build number
       id: PRNUMBER
@@ -39,7 +39,7 @@ jobs:
               echo "::set-env name=file_name::TestReport.${{github.run_number}}.md"
             fi
     - name: Test
-      run: dotnet test --no-restore --no-build --configuration $config --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"
+      run: dotnet test --no-restore --no-build --configuration Release --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"
       # upload report as build artifact
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
