Flat Object Updates
Added ability to update a struct-like object.

--- a/Hands.Of.Jarvis/Hands.Of.Jarvis.csproj
+++ b/Hands.Of.Jarvis/Hands.Of.Jarvis.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="DAO\" />
+    <Folder Include="Attributes\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.3" />
